[package]
name = "chksum-cli"
version = "0.2.0"
authors = ["Konrad Goławski <konrad@golawski.it>"]
edition = "2021"
rust-version = "1.66.0"
description = "A simple checksum calculator."
readme = ".cargo/README.md"
repository = "https://github.com/ferric-bytes/chksum-cli"
license = "MIT"
keywords = ["checksum", "digest", "directory-checksum", "file-checksum", "hash"]
categories = ["command-line-utilities", "cryptography", "filesystem"]

[profile.release]
lto = "fat"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anyhow = "1.0.72"
chksum = "0.2.0"
clap = { version = "4.3.19", features = ["cargo", "derive", "wrap_help", "unicode"] }
colored = { version = "2.0.4", optional = true }
exitcode = "1.1.2"
rayon = "1.7.0"

[dev-dependencies]
assert_cmd = { version = "2.0.12", features = ["color-auto"] }
assert_fs = { version = "1.0.13", features = ["color-auto"] }
thiserror = "1.0.44"

[features]
default = ["color"]
color = ["colored"]

[[bin]]
name = "chksum"
path = "src/main.rs"
