[package]
name = "chksum-cli"
version = "0.3.2"
authors = ["Konrad Goławski <konrad@golawski.it>"]
edition = "2021"
rust-version = "1.66.0"
description = "A simple checksum calculator."
readme = ".cargo/README.md"
repository = "https://github.com/ferric-bytes/chksum-cli"
license = "MIT"
keywords = ["checksum", "digest", "directory-checksum", "file-checksum", "hash"]
categories = ["command-line-utilities", "cryptography", "filesystem"]

[profile.release]
lto = "fat"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anyhow = "1.0.72"
chksum = "0.2.2"
clap = { version = "4.3.19", features = ["cargo", "derive", "wrap_help", "unicode"] }
colored = { version = "2.0.4", optional = true }
exitcode = "1.1.2"
rayon = "1.7.0"

[dev-dependencies]
assert_cmd = { version = "2.0.12", features = ["color-auto"] }
assert_fs = { version = "1.0.13", features = ["color-auto"] }
thiserror = "1.0.44"

[features]
default = [
    # compilation
    "color",
    # algorithms
    "md5",
    "sha1",
    "sha2",
]

# compilation
color = ["colored"]
unstable = ["chksum/unstable"]

# algorithms
md5 = ["chksum/md5"]
sha1 = ["chksum/sha1"]
sha2 = ["sha2-224", "sha2-256", "sha2-384", "sha2-512", "chksum/sha2"]
sha2-224 = ["chksum/sha2-224"]
sha2-256 = ["chksum/sha2-256"]
sha2-384 = ["chksum/sha2-384"]
sha2-512 = ["chksum/sha2-512"]

[[bin]]
name = "chksum"
path = "src/main.rs"
