[package]
name = "chksum-cli"
version = "0.4.1"
authors = ["Konrad Goławski <konrad@golawski.it>"]
edition = "2021"
rust-version = "1.74.0"
description = "A simple checksum calculator."
readme = ".cargo/README.md"
repository = "https://github.com/chksum-rs/cli"
license = "MIT"
keywords = ["checksum", "digest", "directory-checksum", "file-checksum", "hash"]
categories = ["command-line-utilities", "cryptography", "filesystem"]

[profile.release]
lto = "fat"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anyhow = "1.0.76"
chksum = { version = "0.3.0", default-features = false }
clap = { version = "4.4.11", features = ["cargo", "derive", "wrap_help", "unicode"] }
colored = { version = "2.1.0", optional = true }
exitcode = "1.1.2"
rayon = "1.7.0"

[dev-dependencies]
assert_cmd = { version = "2.0.12", features = ["color-auto"] }
assert_fs = { version = "=1.0.12", features = ["color-auto"] }
thiserror = "1.0.51"

[features]
default = [
    # compilation
    "color",
    # algorithms
    "md5", "sha1", "sha2",
]

# compilation
color = ["colored"]

# algorithms
md5 = ["chksum/md5"]
sha1 = ["chksum/sha1"]
sha2 = ["sha2-224", "sha2-256", "sha2-384", "sha2-512", "chksum/sha2"]
sha2-224 = ["chksum/sha2-224"]
sha2-256 = ["chksum/sha2-256"]
sha2-384 = ["chksum/sha2-384"]
sha2-512 = ["chksum/sha2-512"]

[[bin]]
name = "chksum"
path = "src/main.rs"
